--- a/q1.html
+++ b/q1.html
@@ -10,13 +10,13 @@
                <p><b>Which of the following is an input device?</b></p>
                <ol type="A">
                     <li>Fan
-                         <img src="part2image/fan.jpg" id="img"></li>
+                         <img src="fan.jpg" id="img"></li>
                     <li>Keyboard
-                         <img src="part2image/keyboard.jpg" id="img"></li>
+                         <img src="keyboard.jpg" id="img"></li>
                     <li>Ram
-                         <img src="part2image/ram.jpg" id="img"></li>
+                         <img src="ram.jpg" id="img"></li>
                     <li>CPU
-                         <img src="part2image/cpu.jpg" id="img"></li>
+                         <img src="cpu.jpg" id="img"></li>
                </ol>
                <form>
      Answer:<input type="text" name="anwser" size="4" id="answer">&nbsp;<input type="button" name="submit" size ="4" value="Submit" onClick="submitAnswer(1)">
