--- a/q2.html
+++ b/q2.html
@@ -10,7 +10,7 @@
                <p><b>Which of the following is an output device?</b></p>
                <ol type="A">
                     <li>Mouse
-                         <img src="part2image/mouse.jpg" id="img"></li>
+                         <img src="mouse.jpg" id="img"></li>
                     <li>Keyboard
                          <img src="part2image/keyboard.jpg" id="img"></li>
                     <li>Screen
