connect to the final page

--- a/q16.html
+++ b/q16.html
@@ -18,6 +18,6 @@
                <img src="java.png">
                Answer:<input type="text" name="anwser" size="4" id="answer15">&nbsp;
                <input type="button" name="submit" size ="4" value="Submit" onClick="submitAnswer(16)">
-               
+		  <p><a href="celebrate.jpg">Congratulations!</a></p>
           </body>
      </html>
