--- a/final page.html
+++ b/final page.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <h1>You succeeded!</h1>
-    <p><img src="celebrate.jpg" id="potter"></p>
+    <p><img src="celebrate.gif" id="potter"></p>
     <p><a href="q1.html">Onto the Harry Potter trivia quiz!</a></p>
     
 </body>
