--- a/q3.html
+++ b/q3.html
@@ -6,7 +6,7 @@
 	            <link type="text/css" rel="stylesheet" href="question.css">
           </head>
           <body>
-               <h3>Question 3: Computer Units og Measurement</h3>
+               <h3>Question 3: Computer Units of Measurement</h3>
                <p><b>How many bytes are there in a megabyte?</b></p>
                <img src="mega.png" id="mega">
                <ol type="A">
