--- a/q4.html
+++ b/q4.html
@@ -6,7 +6,7 @@
 	            <link type="text/css" rel="stylesheet" href="question.css">
           </head>
           <body>
-               <h3>Question 4: Computer Units og Measurement</h3>
+               <h3>Question 4: Computer Units of Measurement</h3>
                <p><b>What does DPI and PPI mean?</b></p>
               
                <ol type="A">
