--- a/q5.html
+++ b/q5.html
@@ -11,7 +11,7 @@
                <img src="cpu.jpg" id="mega">
                <ol type="A">
                     <li>Computer Processing Unit</li>
-                    <li>Center Processing Unit</li>
+                    <li>Central Processing Unit</li>
                     <li>Computer Performance Unit</li>
                     <li>Central Performance Unit</li>
                </ol>
