--- a/q16.html
+++ b/q16.html
@@ -10,7 +10,7 @@
                <p><b>What pop-up message let’s the user input information?
                </b></p>
                <ol type="A">
-                    <li>cinfirm</li>
+                    <li>confirm</li>
                     <li>console.log</li>
                     <li>prompt</li>
                     <li>booleans</li>
