--- a/final page.html
+++ b/final page.html
@@ -9,7 +9,7 @@
 <body>
     <h1>You succeeded!</h1>
     <p><img src="celebrate.jpg" id="potter"></p>
-    <p><a href="q1.html">Onto the Harry Potter trivia quiz!</a></p>
+    <p><a href="trivia.html">Onto the Harry Potter trivia quiz!</a></p>
       <p><img src="congratulations.gif"></p>
 </body>
 </html>
