--- a/q16.html
+++ b/q16.html
@@ -15,7 +15,7 @@
                     <li>prompt</li>
                     <li>booleans</li>
                </ol>
-               <img src="part2image/java.png">
+               <img src="java.png">
                <br>
                
           </body>
