--- a/final page.html
+++ b/final page.html
@@ -9,7 +9,8 @@
 <body>
     <h1>You succeeded!</h1>
     <p><img src="celebrate.jpg" id="potter"></p>
-    <p><a href="trivia.html">Onto the Harry Potter trivia quiz!</a></p>
-      <p><img src="congratulations.gif"></p>
+	
+    <pre><a href="trivia.html">Onto the Harry Potter trivia quiz!</a></pre>
+    <pre><img src="congratulations.gif"></pre>
 </body>
 </html>
