--- a/final page.html
+++ b/final page.html
@@ -14,6 +14,6 @@
     <pre><a href="trivia.html">Onto the Harry Potter trivia quiz!</a></pre>
 	<br>
 	<br>
-    <pre><img src="congratulations.gif"></pre>
+    <pre><img src="congratulations.gif" id="final"></pre>
 </body>
 </html>
